syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.bytecamp.program_repair.astor.grpc";
option java_outer_classname = "AstorLanguageServerProto";

package routeguide;

service AstorLanguageServer {
  rpc Execute(ExecuteRequest) returns (stream ExecuteResponse) {}

}

message ExecuteRequest {
  repeated string args = 1;
}

message ExecuteResponse {
  FrameType frame_type = 1;
  string arg = 2;
  enum FrameType {
    STDOUT = 0;
    RESULT = 1;
  }
}
